[package]
name = "fsqlite-types"
version = "0.1.2"
description = "Core type definitions for FrankenSQLite"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
native = ["dep:asupersync"]
wasm = []

[dependencies]
bitflags = { workspace = true }
blake3 = { workspace = true }
asupersync = { workspace = true, optional = true }
fsqlite-error = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
memchr = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true }

[dev-dependencies]
asupersync = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
