[package]
name = "fsqlite-vfs"
version = "0.1.2"
description = "Virtual filesystem abstraction layer"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["linux-asupersync-uring"]
linux-asupersync-uring = ["dep:asupersync", "dep:pollster"]
# Deprecated compatibility toggle; guarded by compile_error in src/uring.rs.
linux-uring-fs = ["dep:uring-fs", "dep:pollster"]

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-observability = { workspace = true }
asupersync = { workspace = true, optional = true, features = ["io-uring"] }
nix = { workspace = true }
libc = { workspace = true }
pollster = { version = "0.4", optional = true }
tracing = { workspace = true }
uring-fs = { version = "1.4.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
advisory-lock = "0.3.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
