[package]
name = "fsqlite-vfs"
version = "0.1.3"
description = "Virtual filesystem abstraction layer"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["linux-asupersync-uring"]
native = ["fsqlite-types/native", "linux-asupersync-uring"]
wasm = ["fsqlite-types/wasm"]
linux-asupersync-uring = ["native", "dep:asupersync", "dep:pollster"]
# Deprecated compatibility toggle; guarded by compile_error in src/uring.rs.
linux-uring-fs = ["native", "dep:uring-fs", "dep:pollster"]

[dependencies]
fsqlite-types = { version = "0.1.2", path = "../fsqlite-types", default-features = false }
fsqlite-error = { workspace = true }
fsqlite-observability = { workspace = true }
asupersync = { workspace = true, optional = true, features = ["io-uring"] }
pollster = { version = "0.4", optional = true }
tracing = { workspace = true }
uring-fs = { version = "1.4.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
advisory-lock = "0.3.0"

[dev-dependencies]
tempfile = { workspace = true }

# Cannot inherit workspace lints because workspace forbids unsafe_code
# and VFS requires unsafe for mmap.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cast_lossless = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
