[package]
name = "fsqlite-wal"
version = "0.1.1"
description = "Write-ahead logging"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-vfs = { workspace = true }
xxhash-rust = { workspace = true }
crc32c = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
asupersync = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "raptorq_matrix"
harness = false
