[package]
name = "fsqlite-wal"
version = "0.1.2"
description = "Write-ahead logging"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
native = ["fsqlite-types/native", "fsqlite-vfs/native"]
wasm = ["fsqlite-types/wasm", "fsqlite-vfs/wasm"]
fault-injection = []

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-vfs = { path = "../fsqlite-vfs", version = "0.1.3", default-features = false }
xxhash-rust = { workspace = true }
crc32c = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
asupersync = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "raptorq_matrix"
harness = false

[[test]]
name = "bd_db300_7_2_3_recovery_invariants"
required-features = ["fault-injection"]
